--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,17 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 # http://api.fanyi.baidu.com/api/trans/product/index
 BAIDU_TRANSLATE_APPID=
 BAIDU_TRANSLATE_KEY=
+
+
+# aliyun 短信
+SMS_ALIYUN_ACCESS_KEY_ID=
+SMS_ALIYUN_ACCESS_KEY_SECRET=
+SMS_ALIYUN_SIGN_NAME=
+SMS_ALIYUN_TEMPLATE_REGISTER=
+
+
+# qcloud 短信
+SMS_QCLOUD_SDK_APP_ID=
+SMS_QCLOUD_APP_KEY=
+SMS_QCLOUD_SIGN_NAME=
+SMS_QCLOUD_TEMPLATE_REGISTER=
