--- a/.env.example
+++ b/.env.example
@@ -61,3 +61,8 @@ SMS_QCLOUD_SDK_APP_ID=
 SMS_QCLOUD_APP_KEY=
 SMS_QCLOUD_SIGN_NAME=
 SMS_QCLOUD_TEMPLATE_REGISTER=
+
+
+# socialite weixin
+WEIXIN_KEY=
+WEIXIN_SECRET=
